@@ -1,4 +1,4 @@
-.\" RCSid "$Id: pmblur2.1,v 1.2 2012/10/05 02:07:10 greg Exp $"
+.\" RCSid "$Id: pmblur2.1,v 1.3 2019/11/07 23:20:28 greg Exp $"
 .TH PMBLUR2 1 10/4/2012 RADIANCE
 .SH NAME
 pmblur2 - apply motion blur to a frame from an animation
@@ -42,4 +42,5 @@ pmblur2 94.5,95.5 frame%03d.hdr frame%03d.zbf frame%03d.mvo | pfilt -1 -x /2 -y 
 .SH AUTHOR
 Greg Ward
 .SH "SEE ALSO"
-pdfblur(1), pfilt(1), pinterp(1), pmblur(1), pmdblur(1), ranimove(1)
+pdfblur(1), pfilt(1), pinterp(1), pmblur(1), pmdblur(1), ranimove(1),
+rcode_depth(1), rpict(1), rtpict(1)
