@@ -1,4 +1,4 @@
-# RCSid: $Id: Rmakefile,v 2.81 2019/07/26 16:18:06 greg Exp $
+# RCSid: $Id: Rmakefile,v 2.82 2019/11/07 23:20:28 greg Exp $
 #
 # Makefile for ray tracing library routines
 #
@@ -21,7 +21,7 @@ RTOBJ = cone.o face.o free_os.o instance.o readobj.o readoct.o otypes.o \
 PICOBJ = color.o header.o image.o lamps.o resolu.o rexpr.o spec_rgb.o \
 	colrops.o font.o tonemap.o tmapcolrs.o tmapluv.o tmaptiff.o \
 	tmap16bit.o bmpfile.o falsecolor.o depthcodec.o normcodec.o \
-	idmap.o
+	idmap.o fltdepth.o
 
 UTLOBJ = ezxml.o ccolor.o ccyrgb.o bsdf.o bsdf_m.o bsdf_t.o loadbsdf.o \
 	disk2square.o hilbert.o interp2d.o triangulate.o
